<resources>
    <string name="app_name">Project_X</string>
    <string name="permissions">Permissions</string>
    <string name="perm1">Системные разрешения</string>
    <string name="perm2">Включать поверх приложений</string>
    <string name="perm3">Разрешить в фоновом режиме</string>
    <string name="perm4">Отключить энергосбережение</string>
    <string name="perm5">И здесь отключить энергосбережение</string>
    <string name="permText">Дополнительные разрешения:</string>
    <string name="accept">Продолжить</string>
    <string name="alarmAccept">Необходимо принять все разрешения</string>
    <string name="alarmAcceptText">Проверьте еще раз</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="nameOfWindow">%1$s</string>
    <string name="aboutUs">Шилина Алена\nhttps://github.com/ShilinaAle\n\nГригорьев Константин\nhttps://github.com/KeyRi-Kun\n\nДзюба Ирина\nhttps://github.com/dzyubaira\n\nКорлякова Екатерина\nhttps://github.com/Prostotarakan\n\nЮрасова Елена\nhttps://github.com/greenyellowl\n\nИонова Алена\nhttps://github.com/ionova0070</string>
    <string-array name="themes">
        <item>Акула</item>
        <item>Енот</item>
        <item>Пантера</item>
    </string-array>
    <string name="statusNo">Ваш статус - обычный\n\nА можно получить красивые темы всего за 250р :3</string>
    <string name="statusYes">Ваш статус - Премиум\n\nСпасибо, что Вы с нами!</string>
    <string name="textSMS">Я хочу запланировать с вами звонок: %1$s</string>
    <string name="cancelSMS">Простите, я не смогу присутствовать на звонке, запланированном на: %1$s</string>
    <string name="textCalendar">Этот звонок был создан %2$s.\nНомер собеседника: %1$s</string>
    <string name="textOneCall">Звонок с абонентом: %1$s\nБыл запланирован: %2$s\nБудет: %3$s</string>
    <string name="help">
        Приложение ProjectX упрощает управление звонками на вашем смартфоне.\n\n\nОсновные режимы работы:\n\n
        - Автоматический: поступающий звонок не отвлекает вас от мероприятий, записанных в календаре: собеседнику отправляется сообщение с предложением перезвонить в ближайшее свободное время.\n\n
        - Ручной: предлагает при поступающем звонке перенести его на ближайшее свободное время (в соответствии с мероприятиями в календаре) или на любое удобное для вас время.\n\nПри планировании/отмене звонков - собеседник получает SMS-уведомление, а в календаре заносится/удаляется событие.\n\nВыбор тем Акулы, Енота или Черной пантеры, доступный для пользователей премиум-аккаунта, сохранит ваш стиль даже в мелочах.</string>
</resources>