<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PermissionsActivity"
    android:background="?attr/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/name_perm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="Пожалуйста, включите все разрешения. Это нужно для стабильной работы программмы"
            android:gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="25sp"
            android:textColor="@color/sharkGrey"/>

        <Switch
            android:id="@+id/switch1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="12dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/perm1"
            android:onClick="onPermClick"
            tools:ignore="UseSwitchCompatOrMaterialXml"
            android:textColor="?attr/colorText"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginHorizontal="20dp"
            android:layout_gravity="center"
            android:text="@string/permText"
            android:textColor="?attr/colorText"/>

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_gravity="center"
            android:layout_marginVertical="5dp"
            android:text="@string/perm2"
            android:onClick="onOverClick"
            />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_gravity="center"
            android:text="@string/perm3"
            android:onClick="onBackClick"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_gravity="center"
            android:layout_marginVertical="5dp"
            android:text="@string/perm4"
            android:onClick="onBatClick"/>

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_gravity="center"
            android:text="@string/perm5"
            android:onClick="onAutoClick"/>


    </LinearLayout>



    <Button
        android:id="@+id/buttonPerm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"

        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp"
        android:text="@string/accept"
        android:onClick="onContinueClick"
        android:background="?attr/colorButton"
        android:textColor="?attr/colorTextOnButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>